Attempt to fix item_actions links alignment in fileselect input

--- a/rsc/less/basic.less
+++ b/rsc/less/basic.less
@@ -396,7 +396,9 @@ label.radiooption {
 
 		.item_actions {
 			display: flex;
+			flex-shrink: 1;
 			flex-flow: column wrap;
+			justify-content: flex-start;
 			align-content: center;
 			justify-content: center;
 			text-align: left;
